--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^12.6.4",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
+    "codecov": "^3.5.0",
     "del-cli": "^2.0.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
