--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^7.1.4"
   },
   "devDependencies": {
+    "@tanem/github-changelog-generator": "1.0.2",
     "@types/glob": "7.1.1",
     "@types/node": "12.6.6",
     "@typescript-eslint/eslint-plugin": "1.12.0",
@@ -44,7 +45,7 @@
   "scripts": {
     "authors": "shelljs-authors > AUTHORS",
     "build": "run-s clean compile",
-    "changelog": "github_changelog_generator --no-issues --header-label \"# Changelog\" --future-release v$npm_package_version",
+    "changelog": "github-changelog-generator -f v$npm_package_version > CHANGELOG.md",
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
     "clean": "run-p clean:*",
