--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^7.1.4"
   },
   "devDependencies": {
+    "@tanem/authors": "1.0.0",
     "@tanem/github-changelog-generator": "1.0.2",
     "@types/glob": "7.1.1",
     "@types/node": "12.6.8",
