--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/src/index.js",
   "typings": "dist/src/index.d.ts",
   "bin": {
-    "tanem-scripts": "./dist/bin/tanem-scripts.js"
+    "tanem-scripts": "dist/cli.js"
   },
   "files": [
     "dist"
@@ -44,7 +44,8 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "authors": "shelljs-authors > AUTHORS",
+    "audit": "node dist/cli audit",
+    "authors": "node dist/cli authors",
     "build": "run-s clean compile",
     "changelog": "github-changelog-generator -f v$npm_package_version > CHANGELOG.md",
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
@@ -52,15 +53,15 @@
     "clean": "run-p clean:*",
     "clean:coverage": "del coverage",
     "clean:dist": "del dist",
-    "compile": "tsc -p tsconfig.base.json",
+    "compile": "tsc",
     "format": "prettier --write \"**/*.{js,ts}\"",
     "lint": "eslint . --ext .ts",
     "postversion": "git push && git push --tags && npm publish",
     "release": "npm version -m 'Release v%s'",
     "test": "run-s check:* lint build",
     "// test": "run-s check:* lint build test:*",
-    "// test:cjs": "jest --config ./scripts/jest/config.cjs.js",
-    "// test:src": "jest --config ./scripts/jest/config.src.js",
+    "// test:cjs": "jest --config scripts/jest/config.cjs.js",
+    "// test:src": "jest --config scripts/jest/config.src.js",
     "version": "run-s test changelog authors && git add ."
   }
 }
