--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,22 @@
 {
-  "extends": "./tsconfig.base.json",
-  "include": ["bin", "src", "test"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "declaration": true,
+    "esModuleInterop": true,
+    "lib": ["es2017"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "outDir": "dist",
+    "pretty": true,
+    "removeComments": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2017"
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
