--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@tanem/authors": "1.0.0",
     "commander": "^2.20.0",
     "execa": "^2.0.3",
     "glob": "^7.1.4"
   },
   "devDependencies": {
-    "@tanem/authors": "1.0.0",
     "@tanem/github-changelog-generator": "1.0.2",
     "@types/glob": "7.1.1",
     "@types/node": "12.6.8",
@@ -39,8 +39,6 @@
     "eslint-config-prettier": "6.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
-    "shelljs": "0.8.3",
-    "shelljs-plugin-authors": "2.0.12",
     "typescript": "3.5.3"
   },
   "scripts": {
@@ -50,18 +48,12 @@
     "changelog": "github-changelog-generator -f v$npm_package_version > CHANGELOG.md",
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
-    "clean": "run-p clean:*",
-    "clean:coverage": "del coverage",
-    "clean:dist": "del dist",
+    "clean": "del dist",
     "compile": "tsc",
     "format": "prettier --write \"**/*.{js,ts}\"",
     "lint": "eslint . --ext .ts",
     "postversion": "git push && git push --tags && npm publish",
     "release": "npm version -m 'Release v%s'",
-    "test": "run-s check:* lint build",
-    "// test": "run-s check:* lint build test:*",
-    "// test:cjs": "jest --config scripts/jest/config.cjs.js",
-    "// test:src": "jest --config scripts/jest/config.src.js",
-    "version": "run-s test changelog authors && git add ."
+    "version": "run-s changelog authors && git add ."
   }
 }
