--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/node": "12.6.8",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
-    "codecov": "3.5.0",
     "del-cli": "2.0.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
@@ -52,6 +51,7 @@
     "lint": "eslint . --ext .ts",
     "postversion": "git push && git push --tags && npm publish",
     "release": "npm version -m 'Release v%s'",
-    "version": "run-s changelog authors && git add ."
+    "test": "run-s check:* lint",
+    "version": "run-s test build changelog authors && git add ."
   }
 }
