Move authors and changelog source into this project

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tanem-scripts",
   "version": "1.0.3",
-  "description": "CLI for common scripts for my projects.",
+  "description": "Common scripts for my projects.",
   "author": "Tane Morgan (https://github.com/tanem)",
   "bin": {
     "tanem-scripts": "dist/cli.js"
@@ -13,45 +13,70 @@
   "bugs": "https://github.com/tanem/tanem-scripts/issues",
   "repository": "github:tanem/tanem-scripts",
   "keywords": [
+    "authors",
+    "changelog",
+    "changelog-generator",
     "cli",
+    "generator",
+    "git",
+    "github",
     "javascript",
+    "markdown",
+    "node",
+    "script",
     "scripts",
+    "shortlog",
     "typescript"
   ],
   "license": "MIT",
   "dependencies": {
-    "@tanem/authors": "^1.0.0",
-    "@tanem/github-changelog-generator": "^1.0.4",
+    "@octokit/rest": "^16.28.7",
     "commander": "^2.20.0",
+    "date-fns": "^1.30.1",
     "execa": "^2.0.3",
-    "glob": "^7.1.4"
+    "git-remote-origin-url": "^3.0.0",
+    "glob": "^7.1.4",
+    "parse-github-url": "^1.0.2"
   },
   "devDependencies": {
     "@types/glob": "7.1.1",
+    "@types/jest": "^24.0.16",
+    "@types/lolex": "^3.1.1",
+    "@types/nock": "^10.0.3",
     "@types/node": "12.6.8",
+    "@types/parse-github-url": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
+    "codecov": "^3.5.0",
     "del-cli": "2.0.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
+    "jest": "^24.8.0",
+    "lolex": "^4.1.0",
+    "make-dir": "^3.0.0",
+    "nock": "^10.0.6",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
+    "ts-jest": "^24.0.2",
     "typescript": "3.5.3"
   },
   "scripts": {
-    "audit": "node dist/cli audit",
-    "authors": "node dist/cli authors",
+    "authors": "node dist/cli authors > AUTHORS",
     "build": "run-s clean compile",
-    "changelog": "node dist/cli changelog",
+    "changelog": "node dist/cli changelog -f v$npm_package_version > CHANGELOG.md",
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
-    "clean": "del dist",
-    "compile": "tsc",
+    "clean": "run-p clean:*",
+    "clean:coverage": "del coverage",
+    "clean:dist": "del dist",
+    "compile": "tsc -p tsconfig.base.json",
     "format": "prettier --write \"**/*.{js,ts}\"",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .js,.ts",
     "postversion": "git push && git push --tags && npm publish",
     "release": "npm version -m 'Release v%s'",
-    "test": "run-s check:* lint",
-    "version": "run-s test build changelog authors && git add ."
+    "test": "run-s check:* lint build test:*",
+    "test:cjs": "jest --config ./scripts/jest/config.cjs.js",
+    "test:src": "jest --config ./scripts/jest/config.src.js",
+    "version": "run-s test changelog authors && git add ."
   }
 }
