--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "parse-github-url": "^1.0.2"
   },
   "devDependencies": {
+    "@pollyjs/adapter-node-http": "^2.6.3",
+    "@pollyjs/core": "^2.6.3",
+    "@pollyjs/persister-fs": "^2.6.3",
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.21",
     "@types/lolex": "3.1.1",
@@ -54,9 +57,9 @@
     "jest": "24.9.0",
     "lolex": "5.1.1",
     "make-dir": "3.0.0",
-    "nock": "11.7.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
+    "setup-polly-jest": "^0.6.0",
     "ts-jest": "24.1.0",
     "typescript": "3.7.2"
   },
