--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "@types/nock": "10.0.3",
     "@types/node": "12.12.7",
     "@types/parse-github-url": "1.0.0",
+    "@types/pollyjs__adapter-node-http": "^2.0.0",
+    "@types/pollyjs__core": "^2.6.1",
+    "@types/pollyjs__persister-fs": "^2.0.0",
+    "@types/setup-polly-jest": "^0.5.0",
     "@typescript-eslint/eslint-plugin": "2.7.0",
     "@typescript-eslint/parser": "2.7.0",
     "codecov": "3.6.1",
