--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "execa": "^3.0.0",
     "git-remote-origin-url": "^3.0.0",
     "glob": "^7.1.4",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "parse-github-url": "^1.0.2"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.21",
     "@types/lolex": "3.1.1",
+    "@types/moment-timezone": "^0.5.12",
     "@types/nock": "10.0.3",
     "@types/node": "12.12.7",
     "@types/parse-github-url": "1.0.0",
