--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,19 @@
 {
-  "extends": ["config:js-lib", ":label(internal)"]
+  "extends": [
+    "config:js-lib",
+    ":rebaseStalePrs",
+    ":automergeMinor",
+    ":label(internal)",
+    "group:linters",
+    ":masterIssue",
+    ":assignee(tanem)"
+  ],
+  "stabilityDays": 3,
+  "prCreation": "not-pending",
+  "packageRules": [
+    {
+      "updateTypes": ["major"],
+      "masterIssueApproval": true
+    }
+  ]
 }
