Update travis conf

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "clean:coverage": "del coverage",
     "clean:dist": "del dist",
     "compile": "tsc -p tsconfig.base.json",
+    "coverage": "codecov",
     "format": "prettier --write \"**/*.{js,ts}\"",
     "lint": "eslint . --ext .js,.ts",
     "postversion": "git push && git push --tags && npm publish",
