--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,5 +4,5 @@
     "allowJs": true,
     "checkJs": true
   },
-  "include": ["scripts", "src", "test"]
+  "include": ["scripts", "src", "test", "types"]
 }
