Group pollyjs packages

--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,10 @@
     {
       "depTypeList": ["dependencies"],
       "rangeStrategy": "bump"
+    },
+    {
+      "groupName": "pollyjs monorepo",
+      "packagePatterns": ["^@pollyjs/"]
     }
   ]
 }
