--- a/renovate.json
+++ b/renovate.json
@@ -2,20 +2,14 @@
   "extends": [
     "config:js-lib",
     ":rebaseStalePrs",
-    ":automergeMinor",
+    ":automergeAll",
     ":label(internal)",
     ":masterIssue"
   ],
-  "ignorePaths": ["**/node_modules/**"],
   "lockFileMaintenance": {
     "enabled": true
   },
-  "stabilityDays": 3,
   "packageRules": [
-    {
-      "sourceUrlPrefixes": ["https://github.com/tanem/"],
-      "stabilityDays": 0
-    },
     {
       "depTypeList": ["dependencies"],
       "rangeStrategy": "bump"
@@ -24,5 +18,7 @@
       "groupName": "pollyjs monorepo",
       "packagePatterns": ["^@pollyjs/"]
     }
-  ]
+  ],
+  "prCreation": "not-pending",
+  "stabilityDays": 3
 }
