--- a/renovate.json
+++ b/renovate.json
@@ -3,8 +3,8 @@
     "config:js-lib",
     ":rebaseStalePrs",
     ":automergeAll",
-    ":masterIssue",
-    ":label(internal)"
+    ":label(internal)",
+    ":masterIssue"
   ],
   "lockFileMaintenance": {
     "enabled": true
