--- a/package.json
+++ b/package.json
@@ -55,15 +55,15 @@
     "@types/semver": "7.3.6",
     "@typescript-eslint/eslint-plugin": "4.26.0",
     "@typescript-eslint/parser": "4.26.0",
-    "del-cli": "3.0.1",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
-    "jest": "26.6.3",
+    "jest": "27.0.4",
     "lolex": "5.1.2",
     "make-dir": "3.1.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
-    "ts-jest": "26.5.6",
+    "shx": "0.3.3",
+    "ts-jest": "27.0.3",
     "typescript": "4.3.2"
   },
   "scripts": {
@@ -71,7 +71,7 @@
     "check:format": "prettier --list-different \"**/*.{js,ts}\"",
     "check:types": "tsc --noEmit",
     "clean": "run-p clean:*",
-    "clean:dist": "del dist",
+    "clean:dist": "shx rm -rf dist",
     "compile": "tsc -p tsconfig.base.json",
     "format": "prettier --write \"**/*.{js,ts}\"",
     "lint": "eslint . --ext .js,.ts",
