Restrict execa versions

--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,12 @@
     {
       "depTypeList": ["dependencies"],
       "rangeStrategy": "bump"
+    },
+    {
+      "matchPackageNames": [
+        "execa"
+      ],
+      "allowedVersions": "< 6.0.0"
     }
   ],
   "prCreation": "not-pending",
