Restrict @octokit/rest version

--- a/renovate.json
+++ b/renovate.json
@@ -22,6 +22,10 @@
     {
       "matchPackageNames": ["git-remote-origin-url"],
       "allowedVersions": "< 4.0.0"
+    },
+    {
+      "matchPackageNames": ["@octokit/rest"],
+      "allowedVersions": "< 17.0.0"
     }
   ],
   "prCreation": "not-pending",
