--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "28.1.0",
+    "jest-jasmine2": "28.1.0",
     "lolex": "5.1.2",
     "make-dir": "3.1.0",
     "npm-run-all": "4.1.5",
